@@ -1,7 +1,7 @@
 Package: trtf
 Title: Transformation Trees and Forests
-Version: 0.3-2
-Date: 2018-06-22
+Version: 0.3-3
+Date: 2018-06-27
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))
 Description: Recursive partytioning of transformation models with
